--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_rating_stars: ^1.1.0
   pinput: ^5.0.0
   fl_chart: ^0.69.0
+  flutter_expandable_fab: ^2.3.0
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
