--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   fl_chart: ^0.69.0
   flutter_expandable_fab: ^2.3.0
   card_swiper: ^3.0.1
+  excel: ^4.0.6
+  file_picker: ^8.1.3
 
 dev_dependencies:
   flutter_test:
