--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   file_picker: ^8.1.3
   uuid: ^4.4.2
   flutter_dotenv: ^5.1.0
+  awesome_dialog: ^3.2.1
 
 dev_dependencies:
   flutter_test:
