--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   awesome_dialog: ^3.2.1
   flutter_barcode_scanner: ^2.0.0
+  page_flip_builder: ^0.1.4
 
 dev_dependencies:
   flutter_test:
