--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/logo/logo_purple.jpg"
+  image_path: "assets/logo/logo_orange.jpg"
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/logo/logo.png"
+  adaptive_icon_foreground: "assets/logo/logo_1.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
   flutter_lints: ^5.0.0
